cmake_minimum_required(VERSION 3.9)
project(cpp_basic)

set(CMAKE_CXX_STANDARD 20)

add_executable(l1-1 "Lesson 1/Activity 1 - Find the Factors of 7 between 1 and 100 using while Loop/main.cpp")
add_executable(l1-2 "Lesson 1/Activity 2 - Define a Bi-dimensional Array and Initialize its Elements/main.cpp")
